--- a/index.html
+++ b/index.html
@@ -145,21 +145,21 @@
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../RECUPERAÇÃO/HTML/ai.png" class="d-block w-100" alt="IA">
+                <img src="ai.png" class="d-block w-100" alt="IA">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Inteligência Artificial</h5>
                     <p>A inovação tecnológica que transforma os negócios do futuro.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../RECUPERAÇÃO/HTML/automacao.jpg" class="d-block w-100" alt="Automação">
+                <img src="automacao.jpg" class="d-block w-100" alt="Automação">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Automação Inteligente</h5>
                     <p>Automatize processos para maior eficiência e inovação.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../RECUPERAÇÃO/HTML/assistente.jpg" class="d-block w-100" alt="Assistente Virtual">
+                <img src="assistente.jpg" class="d-block w-100" alt="Assistente Virtual">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Assistentes Virtuais</h5>
                     <p>Ajudando a otimizar o tempo e facilitar o cotidiano.</p>
@@ -185,7 +185,7 @@
         <div class="row text-center">
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card">
-                    <img src="../RECUPERAÇÃO/HTML/chatgpt.png" class="card-img-top" alt="ChatGPT">
+                    <img src="chatgpt.png" class="card-img-top" alt="ChatGPT">
                     <div class="card-body">
                         <h5 class="card-title">ChatGPT</h5>
                         <p class="card-text">Converse com IA de forma fluida e inteligente, aproveite seu potencial no atendimento ao cliente.</p>
@@ -194,7 +194,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card">
-                    <img src="../RECUPERAÇÃO/HTML/leonardo.png" class="card-img-top" alt="Leonardo">
+                    <img src="leonardo.png" class="card-img-top" alt="Leonardo">
                     <div class="card-body">
                         <h5 class="card-title">Leonardo AI</h5>
                         <p class="card-text">Transforme simples ideias em arte digital com a nossa IA criativa.</p>
@@ -203,7 +203,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card">
-                    <img src="../RECUPERAÇÃO/HTML/copilot.png" class="card-img-top" alt="Copilot">
+                    <img src="copilot.png" class="card-img-top" alt="Copilot">
                     <div class="card-body">
                         <h5 class="card-title">GitHub Copilot</h5>
                         <p class="card-text">Ajudando programadores com sugestões inteligentes e código automatizado.</p>
